cmake_minimum_required(VERSION 2.8)
project(zstream C)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic")
find_library(ZMQ zmq REQUIRED)
set(SOURCE_FILES main.c)
add_executable(zstream ${SOURCE_FILES})
target_link_libraries(zstream ${ZMQ})
install(TARGETS zstream RUNTIME DESTINATION bin)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ZMQ CLI streamer")
SET(CPACK_PACKAGE_VENDOR "Baryshnikov Alexander <dev@baryshnikov.net>")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
include(CPack)